# chatrs

./: Cargo.toml  justfile
src/: consts.rs  main.rs  message.rs  server.rs  storage.rs  utils.rs
src/consts/: adjective_map.rs  noun_map.rs
src/message/: chat_message.rs  server_chat_message.rs  user_chat_message.rs
src/server/: handlers.rs  state.rs  timestamp.rs
src/server/handlers/: connect_handler.rs  new_message_handler.rs  user_sent_message_handler.rs
src/storage/: simple.rs  sqlite.rs
src/utils/: hr_generator.rs  identifier_generator.rs  user_id.rs
