[package]
name = "chatrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
